# flipper

./: pyproject.toml
example_bot/: main.py
